# amazon-product-search

./: .dockerignore  .envrc.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.indexing  Dockerfile.training  Makefile  README.md  cloudbuild.yaml  compose.yaml  docker-compose.yml  pyproject.toml  tasks.py
src/amazon-product-search/: .envrc.example  Dockerfile.indexing  README.md  RETRIEVAL_ARCHITECTURE_REFACTOR.md  pyproject.toml
src/amazon-product-search/data/: .gitignore
src/amazon-product-search/data/includes/: synonyms_jp_fine_tuned_sbert.csv  synonyms_jp_sbert.csv  synonyms_us_mpnet.csv
src/amazon-product-search/elasticsearch/schemas/: products_jp.json  products_us.json
src/amazon-product-search/examples/: retrieval_architecture_examples.py
src/amazon-product-search/src/amazon_product_search/: constants.py  source.py
src/amazon-product-search/src/amazon_product_search/core/: parallel.py
src/amazon-product-search/src/amazon_product_search/es/: es_client.py  query_builder.py
src/amazon-product-search/src/amazon_product_search/indexing/: query_pipeline.py
src/amazon-product-search/src/amazon_product_search/modules/: colbert.py
src/amazon-product-search/src/amazon_product_search/reranking/: reranker.py
src/amazon-product-search/src/amazon_product_search/retrieval/: factory.py  keyword_generator.py  pipeline.py  query_vector_cache.py  rank_fusion.py  response.py  retriever.py  weighting_strategy.py
src/amazon-product-search/src/amazon_product_search/synonyms/: generator.py  synonym_dict.py
src/amazon-product-search/src/amazon_product_search/vespa/: query_builder.py  vespa_client.py
src/amazon-product-search/tasks/: __init__.py  data_tasks.py  demo_tasks.py  es_tasks.py  model_tasks.py  synonyms_tasks.py  training_tasks.py  vespa_tasks.py
src/amazon-product-search/tests/unit/amazon_product_search/: test_cache.py  test_metrics.py
src/amazon-product-search/tests/unit/es/: test_es_client.py
src/amazon-product-search/tests/unit/nlp/: test_importance.py  test_japanese_tokenizer.py
src/amazon-product-search/tests/unit/reranking/: test_reranker.py
src/amazon-product-search/tests/unit/retrieval/: test_core_types.py  test_engines.py  test_factory.py  test_pipeline.py  test_processors.py  test_rank_fusion.py  test_response.py  test_retriever.py
src/amazon-product-search/tests/unit/synonyms/: test_generator.py
src/amazon-product-search/vespa/: hosts.xml
src/amazon-product-search/vespa/schemas/: product.sd
src/data-source/: Makefile  README.md  pyproject.toml
src/data-source/data/: .gitignore
src/data-source/src/data_source/: __init__.py  loader.py
src/demo/: Makefile  README.md  catalog.py  comparison.py  dataset.py  experiment.py  experimental_setup.py  main.py  page_config.py  pyproject.toml  readme.py  sparse_search.py  utils.py  🏠_Home.py
src/demo/apps/dataset/: dataset.py  judgements.py
src/demo/apps/eda/: 📊_Product_Catalogue.py
src/demo/apps/eda/pages/: 1_📊_Relevance_Judgements.py
src/demo/apps/es/: search_ui.py  🔍_Retrieval.py
src/demo/apps/es/pages/: 1_🔍_Sparse_vs_Dense.py  2_🔍_Reranking.py
src/demo/apps/experiment/: experiment.py  experiment_setup.py  📊_Experiment.py
src/demo/apps/features/: 🤖_Tokenization.py
src/demo/apps/features/pages/: 1_🤖_Synonyms.py  2_🤖_Keyword_Extraction.py  3_🤖_Keyword_Generation.py  4_🤖_Importance_Estimation.py
src/demo/apps/search/: experiment_setup.py  experimental_setup.py  search_ui.py  🔍_Retrieval.py
src/demo/apps/search/pages/: 1_🔍_Reranking.py  1_🔍_Retrieval_Evaluation.py  1_🔍_Sparse_vs_Dense.py  1_🤖_Tokenization.py  2_🔍_Experiments.py  2_🔍_Reranking.py  3_🔍_Experiments.py  (+4 more)
src/demo/apps/vespa/: dev_tools.py  🔍_Retrieval.py
src/demo/pages/: 10_🔍_Experiments.py  1_📊_Product_Catalogue.py  2_📊_Relevance_Judgements.py  3_🤖_Keyword_Extraction.py  3_🤖_Tokenization.py  4_🔍_Search.py  4_🤖_Reranking.py  4_🤖_Synonyms.py  5_🔍_Experiments.py  5_🔍_Retrieval_Experiments.py  5_🔍_Search.py  5_🤖_Keyword_Extraction.py  5_🤖_Reranking.py  6_🔍_Experiments.py  6_🔍_Reranking_Experiments.py  6_🤖_Keyword_Generation.py  7_🤖_Importance_Estimation.py  7_🤖_Reranking.py  8_🔍_Experiments.py  8_🤖_Reranking.py  dataset.py  dense_search.py  experiment.py  sparse_search.py
src/demo/pages/dataset/: catalogue.py  dataset.py  judgements.py  utils.py
src/demo/pages/experiment/: experiment.py  experiments.py
src/demo/pages/keyword_extraction/: keyword_extraction.py
src/demo/pages/search/: search.py
src/demo/src/demo/: utils.py
src/dense-retrieval/: README.md  pyproject.toml
src/indexing/: Dockerfile  Makefile  README.md  __main__.py  pipeline.py  pyproject.toml
src/indexing/conf/: config.yaml  encode.yaml  feed.yaml
src/indexing/conf/dest/: bq.yaml  es.yaml  stdout.yaml  vespa.yaml
src/indexing/conf/runner/: dataflow.yaml  direct.yaml
src/indexing/io/: elasticsearch_io.py  vespa_io.py
src/indexing/src/indexing/: __main__.py  cli.py  doc_pipeline.py  feeding_pipeline.py  options.py  query_pipeline.py
src/indexing/tests/integration/: es_docker.py  test_elasticsearch_io.py  test_pipeline.py
src/indexing/transforms/: analyze_fn.py  encode_fn.py  extract_keywords_fn.py
src/model-serving/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  requirements.txt
src/model-serving/conf/: config.yaml
src/model-serving/model_repository/all_minilm/: config.pbtxt
src/model-serving/model_repository/embedder/: config.pbtxt
src/model-serving/model_repository/embedder_onnx/: config.pbtxt
src/model-serving/model_repository/embedder_pt/: config.pbtxt
src/model-serving/model_repository/ensemble/: config.pbtxt
src/model-serving/model_repository/tokenizer/: config.pbtxt
src/model-serving/src/model_serving/: cli.py
src/training/: Dockerfile  Makefile  README.md  __main__.py  pyproject.toml
src/training/conf/: config.yaml
src/training/conf/compile_parameters/: default.yaml
src/training/conf/runtime_parameters/: fine-tune-cl.yaml  fine-tune-mlm.yaml
src/training/src/pipeline/: __main__.py  cli.py  pipelines.py
src/training/src/training/: __main__.py  cli.py
(+384 files in other folders)
