[tool.poetry]
name = "amazon-product-search"
version = "0.1.0"
description = ""
authors = ["rejasupotaro"]

[tool.poetry.dependencies]
python = "3.11.8"
streamlit = "^1.33.0"
pandas = "^1.5.0"
apache-beam = {version = "2.50.0", extras = ["gcp"]}
fugashi = {extras = ["unidic"], version = "^1.2.0"}
ipadic = "^1.0.0"
elasticsearch = "8.12.1"
plotly = "^5.10.0"
tqdm = "^4.64.1"
torch = "2.0.0"
transformers = "^4.25.1"
sentence-transformers = "^2.3.1"
watchdog = "^2.1.9"
streamlit-aggrid = "^0.3.3"
keybert = "^0.7.0"
more-itertools = "^9.0.0"
scikit-learn = "^1.2.0"
tabulate = "^0.9.0"
tensorboard = "^2.11.0"
unidic-lite = "^1.0.8"
polars = {version = "^0.16.0", extras = ["numpy", "pandas", "pyarrow"]}
types-requests = "^2.28.11.17"
docker = "^7.0.0"
amazon-product-search-dense-retrieval = {git = "https://github.com/rejasupotaro/amazon-product-search-dense-retrieval.git"}
google-cloud-aiplatform = "^1.25.0"
kfp = "^2.7.0"
gcsfs = "^2023.6.0"
jinja2 = "^3.1.2"
google-cloud-bigquery = {extras = ["pandas"], version = "^3.12.0"}
pyvespa = "^0.39.0"
tritonclient = "^2.41.1"
openai = "^1.14.2"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^4.0.0"
mypy = "^1.9.0"
jupyterlab = "3.5.0"
seaborn = "^0.12.1"
ruff = "^0.0.265"
black = "^23.3.0"
matplotlib-venn = "^0.11.10"
optuna = "^3.5.0"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
# For available rules, see https://beta.ruff.rs/docs/rules/
select = [
    "F",  # Pyflakes
    "E",  # pydocstyle
    "W",  # pydocstyle
    "C90",  # mccabe
    "I",  # isort
    "N",  # pep8-naming
    "YTT",  # flake8-2020
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "Q",  # flake8-quotes
    "PT",  # flake8-pytest-style
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
]
line-length = 120

[tool.ruff.isort]
known-first-party = [
    "amazon_product_search",
    "amazon_product_search_dense_retrieval",
    "demo",
]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
ignore_missing_imports = true
