[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.8"

[tool.poetry.group.dev.dependencies]
amazon_product_search = { path = "src/amazon-product-search" }
ruff = "^0.8.4"
mypy = "^1.14.0"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
# For available rules, see https://beta.ruff.rs/docs/rules/
select = [
    "F",  # Pyflakes
    "E",  # pydocstyle
    "W",  # pydocstyle
    "C90",  # mccabe
    "I",  # isort
    "N",  # pep8-naming
    "YTT",  # flake8-2020
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "Q",  # flake8-quotes
    "PT",  # flake8-pytest-style
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
]
ignore = []
extend-select = ["I"]


[tool.ruff.lint.isort]
known-first-party = [
    "amazon_product_search",
    "dense_retrieval",
    "training",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
mypy_path = ["src"]
ignore_missing_imports = true
