[tool.poetry]
name = "amazon-product-search"
version = "0.1.0"
description = ""
authors = ["rejasupotaro"]

[tool.poetry.dependencies]
python = "3.11.8"
pandas = "^1.5.0"
apache-beam = {version = "2.50.0", extras = ["gcp"]}
fugashi = {extras = ["unidic"], version = "^1.2.0"}
ipadic = "^1.0.0"
elasticsearch = "8.12.1"
plotly = "^5.10.0"
tqdm = "^4.64.1"
torch = "2.0.0"
transformers = "^4.25.1"
sentence-transformers = "^2.3.1"
watchdog = "^2.1.9"
keybert = "^0.7.0"
more-itertools = "^9.0.0"
scikit-learn = "^1.2.0"
tabulate = "^0.9.0"
tensorboard = "^2.11.0"
unidic-lite = "^1.0.8"
polars = {version = "^0.16.0", extras = ["numpy", "pandas", "pyarrow"]}
types-requests = "^2.28.11.17"
docker = "^7.0.0"
amazon-product-search-dense-retrieval = {git = "https://github.com/rejasupotaro/amazon-product-search-dense-retrieval.git"}
google-cloud-aiplatform = "^1.25.0"
kfp = "^2.7.0"
gcsfs = "^2023.6.0"
jinja2 = "^3.1.2"
google-cloud-bigquery = {extras = ["pandas"], version = "^3.12.0"}
pyvespa = "^0.39.0"
tritonclient = "^2.41.1"
openai = "^1.14.2"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^4.0.0"
optuna = "^3.5.0"
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
