[project]
name = "data-source"
version = "0.1.0"
description = ""
authors = [
    {name = "Kentaro Takiguchi",email = "kentaro-takiguchi@mercari.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "data_source", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
