[project]
name = "data-source"
version = "0.1.0"
description = ""
authors = [
    {name = "Kentaro Takiguchi",email = "kentaro-takiguchi@mercari.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pyarrow (>=16.0.0,<20.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
