[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["rejasupotaro"]

[tool.poetry.dependencies]
python = "3.11.8"
amazon_product_search = { path = "../amazon-product-search", develop = true }
streamlit = "^1.39.0"
streamlit-aggrid = "^1.0.5"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
