[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo"
version = "0.1.0"
description = ""
authors = [{name = "rejasupotaro"}]
requires-python = ">=3.11"
dependencies = [
    "amazon-product-search",
    "streamlit>=1.39.0",
    "streamlit-aggrid>=1.0.5",
    "data-source",
]

[tool.uv.sources]
amazon-product-search = { workspace = true }
data-source = { workspace = true }

# Keep Poetry config for backward compatibility during transition
[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["rejasupotaro"]

[tool.poetry.dependencies]
python = "3.11.8"
amazon_product_search = { path = "../amazon-product-search", develop = true }
streamlit = "^1.39.0"
streamlit-aggrid = "^1.0.5"
data-source = {path = "../data-source", develop = true}

[tool.poetry.group.dev.dependencies]
