[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo"
version = "0.1.0"
description = ""
authors = [{name = "rejasupotaro"}]
requires-python = ">=3.11"
dependencies = [
    "amazon-product-search",
    "streamlit>=1.39.0",
    "streamlit-aggrid>=1.0.5",
    "data-source",
]

[tool.uv.sources]
amazon-product-search = { workspace = true }
data-source = { workspace = true }

