[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dense-retrieval"
version = "0.1.0"
description = "Dense Retrieval Models"
authors = [{name = "rejasupotaro"}]
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.3.1",
    "transformers>=4.28.1",
    "fugashi[unidic]>=1.2.0",
    "unidic-lite>=1.0.8",
    "sentencepiece>=0.1.99",
    "annoy>=1.17.2",
    "sentence-transformers>=2.2.2",
    "more-itertools>=9.1.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.1",
    "torch>=2.5.1",
    "lightning>=2.4.0"
]

