[project]
name = "model-serving"
version = "0.1.0"
description = ""
authors = [{name="rejasupotaro"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "onnxruntime (>=1.21.0,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "onnx (>=1.17.0,<2.0.0)",
    "transformers (>=4.50.3,<5.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "fugashi (>=1.4.0,<2.0.0)",
    "unidic-lite (>=1.0.8,<2.0.0)"
]

[tool.poetry]
packages = [{include = "model_serving", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
