[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["rejasupotaro"]

[tool.poetry.dependencies]
python = "3.11.8"
amazon_product_search = { path = "../amazon-product-search", develop = true }
transformers = "^4.46.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
pytest-cov = "^4.0.0"
typer = "^0.15.2"
kfp = "^2.12.1"
google-cloud-aiplatform = "^1.83.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
