[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "training"
version = "0.1.0"
description = ""
authors = [{name = "rejasupotaro"}]
requires-python = ">=3.11"
dependencies = [
    "amazon-product-search",
    "transformers>=4.46.1",
]

[tool.uv.sources]
amazon-product-search = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.2",
    "pytest-cov>=4.0.0",
    "typer>=0.15.2",
    "kfp>=2.12.1",
    "google-cloud-aiplatform>=1.83.0",
    "hydra-core>=1.3.2",
]

